# Tiny-Project-1-Programming-2

./: CMakeLists.txt  README.md  main.cpp
Information and how to run/: How_to_run.txt
include/: Data_loader.h  Linear_regression.h  Linear_system.h  Matrix.h  Non_square_system.h  Pos_sym_lin_system.h  Vector.h
src/: Data_loader.cpp  Linear_regression.cpp  Linear_system.cpp  Matrix.cpp  Non_square_system.cpp  Pos_sym_lin_system.cpp  Vector.cpp
test/: test_linear_system.cpp  test_matrix.cpp  test_non_square_system.cpp  test_pos_sym_lin_system.cpp  test_regression_real_data.cpp  test_vector.cpp
